tests/fixtures/LatestTests/ObjectTests/errors/invalid_binary_operation.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30
}

var result = p + p

